comments processedd